--- a/assets/css/1-Base/_base.sass
+++ b/assets/css/1-Base/_base.sass
@@ -24,6 +24,12 @@
     max-width: 90%
     margin: 0 auto
 
+.general-margins
+    margin: 48px 0
+    @media screen and (max-width: 640px)
+        margin: 0
+
+
 $john-green: #00BFA5
 
 .site-content
