--- a/assets/css/1-Base/_typography.sass
+++ b/assets/css/1-Base/_typography.sass
@@ -57,3 +57,9 @@ hr
   clear: both
   margin: 10px 0 30px
   height: 0
+
+blockquote
+  border-left: 8px solid $john-green
+  padding-left: 8px
+  position: relative
+  left: -16px
