--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="footer-contact">
-        <form action="https://formspree.io/your@email.com"
+        <form action="https://formspree.io/{{ site.email }}"
         method="POST">
           <input type="text" name="name" placeholder="Full Name">
           <input type="email" name="_replyto" placeholder="Email">
