Work Meta Update

--- a/assets/css/1-Base/_typography.sass
+++ b/assets/css/1-Base/_typography.sass
@@ -59,7 +59,15 @@ hr
   height: 0
 
 blockquote
-  border-left: 8px solid $john-green
-  padding-left: 8px
-  position: relative
-  left: -16px
+  background-color: #DDD
+  color: #222
+  border-left: 5px solid $john-green
+  padding: 2em
+  margin: 0
+  margin-bottom: 50px
+  font-style: oblique
+  box-shadow: 0 7px 15px rgba(black, .2)
+  p
+    font-size: 2em
+    line-height: 1.7em
+    margin: 0
