Mobilize Media Kit

--- a/assets/css/3-Layouts/_about.sass
+++ b/assets/css/3-Layouts/_about.sass
@@ -15,7 +15,8 @@
         color: #FFF
         box-shadow: 0 7px 15px rgba($john-green, .3)
         text-decoration: none
-
+    @media screen and (max-width: 640px)
+        font-size: 1.4em
 .longform-description
     font-size: 1.5em
     line-height: 2em
