--- a/assets/css/3-Layouts/_home.sass
+++ b/assets/css/3-Layouts/_home.sass
@@ -2,6 +2,7 @@
     @media screen and (max-width: 960px)
         max-width: 100%
 
+
 #home-hero
     background: url('../img/hero.png')
     background-size: contain
@@ -10,8 +11,8 @@
     padding: 48px 0 64px 0
     @media screen and (max-width: 960px)
         background-size: cover
-        background-position: center center
-        padding: 0 0 64px 0
+        background-position: top center
+        padding: 64px 0
     .description
         width: 50%
         +responsive-type(3.5vw, 32px, 64px, 64px)
