--- a/assets/css/3-Layouts/_home.sass
+++ b/assets/css/3-Layouts/_home.sass
@@ -10,9 +10,10 @@
     background-repeat: no-repeat
     padding: 48px 0 64px 0
     @media screen and (max-width: 960px)
-        background-size: cover
-        background-position: top center
+        background-position: center center
         padding: 64px 0
+    @media screen and (max-width: 640px)
+        background-position: top center
     .description
         width: 50%
         +responsive-type(3.5vw, 32px, 64px, 64px)
