Social Share Meta Tags

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.sidr/2.2.1/stylesheets/jquery.sidr.bare.css">
         <meta property="og:title" content="{{ page.title }}">
         <meta property="og:description" content="{% if page.quote %}{{ page.quote }}{% endif %}">
-        <meta property="og:image" content="{{ page.image | prepend: "../assets/img/"  }}">
+        <meta property="og:image" content="{{ page.image }}">
         <meta property="og:url" content="{{ page.url }}">
-        <meta name="twitter:card" content="{{ page.image | prepend: "../assets/img/"  }}">
+        <meta name="twitter:card" content="{{ page.image }}">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
