--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta property="og:title" content="{{ page.title }}">
+        <meta property="og:description" content="{{ site.description }}">
+        <meta property="og:image" content="../assets/img/hero.png">
+        <meta property="og:url" content="{{ site.url }}">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="og:site_name" content="John Paul Brammer">
+        <meta name="twitter:image:alt" content="John Paul Brammer">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
