--- a/_includes/cv-footer.html
+++ b/_includes/cv-footer.html
@@ -27,7 +27,7 @@
       &copy; 2016 John Paul Brammer
     </div>
     <div class="footer-designed-by">
-      designed &amp; developed with <span>&#x2665</span> by <a href="http://www.thinkpuro.com" target="_blank">thinkPuro</a>
+      designed &amp; developed with <span>&#x2665</span> by <a href="http://www.thinkpuro.com" target="_blank">Think Puro</a>
     </div>
   </footer>
 </div>
