--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@
               {% endif %}
             </span><br>
             {% if page.original %}
-              <a href="{{ page.original }}" class="original-link" target="_blank">Original&#x2197;</a>
+              <a href="{{ page.original }}" class="original-link" target="_blank">Original &#8599;</a>
             {% endif %}
             <hr>
             <div class="share">
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-        <a href="/work" class="all-link"><h4>View All Work <span>&#x2197;</span></h4></a>
+        <a href="/work" class="all-link"><h4>View All Work <span>&#8599;</span></h4></a>
 
 
     {% include footer.html %}
