--- a/assets/css/1-Base/_typography.sass
+++ b/assets/css/1-Base/_typography.sass
@@ -62,12 +62,12 @@ blockquote
   background-color: #DDD
   color: #222
   border-left: 5px solid $john-green
-  padding: 2em
+  padding: 2em 3em
   margin: 0
   margin-bottom: 50px
   font-style: oblique
   box-shadow: 0 7px 15px rgba(black, .2)
   p
-    font-size: 2em
+    font-size: 2.2em
     line-height: 1.7em
     margin: 0
