--- a/assets/css/3-Layouts/_work-individual.sass
+++ b/assets/css/3-Layouts/_work-individual.sass
@@ -162,7 +162,6 @@
         color: #222
         margin: 16px 0
         text-transform: none
-        padding-right: 32px
         position: relative
         font-style: oblique
 
@@ -174,12 +173,16 @@
     .tags
         background-color: transparent
         padding: 0
+        padding-bottom: 16px
         color: #222
         text-transform: uppercase
         transition: none
         letter-spacing: 0.2em
         font-size: 10px
         font-weight: 400
+    .date
+        padding: 16px 0 !important
+        display: block
     a
         font-family: 'Source Sans Pro', sans-serif
         display: inline-block
