Mobile Share Updates

--- a/assets/css/3-Layouts/_work-individual.sass
+++ b/assets/css/3-Layouts/_work-individual.sass
@@ -75,7 +75,7 @@
         font-weight: 400
     .date
         padding: 16px 0 !important
-        display: block
+        display: block !important
     a
         font-family: 'Source Sans Pro', sans-serif
         display: inline-block
