Update Footer to Kubo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
       &copy; 2016 John Paul Brammer
     </div>
     <div class="footer-designed-by">
-      designed &amp; developed with <span>&#x2665</span> by <a href="http://www.thinkpuro.com" target="_blank">Think Puro</a>
+      designed &amp; developed with <span>&#x2665</span> by <a href="http://www.kubonyc.com" target="_blank">Kubo</a>
     </div>
   </footer>
 
